--- a/pfsense_security_zone_deploy.yml
+++ b/pfsense_security_zone_deploy.yml
@@ -176,6 +176,7 @@
 #     before: 'bottom'
 #     state: present
 
+# this block rule must be here or it will block those above.
 - name: "Add standard block rule"
     pfsense_rule:
      name: 'standard network block'
