--- a/pfsense_security_zone_deploy.yml
+++ b/pfsense_security_zone_deploy.yml
@@ -183,7 +183,7 @@
      protocol: any
      source: any
      destination: RFC_1918
-     after: 'top'
+     before: 'bottom'
      state: present
 
 # to allow access to internett change interface to any
