--- a/pfsense_security_zone_deploy_internet.yml
+++ b/pfsense_security_zone_deploy_internet.yml
@@ -1,6 +1,8 @@
 ---
 - hosts: pfsense
-  remote_user: root
+  remote_user: firstguy
+  become: yes
+  become_method: sudo
   gather_facts: false
   #connection: paramiko
   collections:
@@ -94,9 +96,6 @@
      protocol: tcp
      source: "{{ interface_name }}"
      destination: mgmt_servers
-     # ldap
-     #destination_port: 389
-     # ldaps
      destination_port: mgmt_ports
      #after: allow interface to loghost rule
      before: 'bottom'
@@ -194,9 +193,24 @@
      interface: "{{ interface_name }}"
      ipprotocol: inet
      protocol: tcp
-     source: ansible_servers
+     source: bastion_servers
      destination: "{{ interface_name }}"
-     destination_port: 22
+     destination_port: bastion_ports
+    #after: allow interface to mgmt rule
+     #before: 'bottom'
+     before: 'top'
+     state: present
+
+     - name: "allow moncore prometheus to interface rule"
+    pfsense_rule:
+     name: 'allow bastion_mgmt to interface rule'
+     action: pass
+     interface: "{{ interface_name }}"
+     ipprotocol: inet
+     protocol: tcp
+     source: moncore_servers
+     destination: "{{ interface_name }}"
+     destination_port: remote_monitoring_ports
     #after: allow interface to mgmt rule
      #before: 'bottom'
      before: 'top'
