fixed error on standard block rule

--- a/pfsense_security_zone_deploy.yml
+++ b/pfsense_security_zone_deploy.yml
@@ -11,8 +11,8 @@
   #become_method: sudo
   vars:
     network_card: oce1
-    vlan: 10
-    interface_name: bastion_mgmt
+    vlan: 21
+    interface_name: office
 
   tasks:
   - name: add vlans pfsense
